--- a/src/03-promises.html
+++ b/src/03-promises.html
@@ -24,6 +24,7 @@
       </label>
       <button type="submit">Create promises</button>
     </form>
+    <div class="results"></div>
 
     <script src="js/03-promises.js" type="module"></script>
   </body>
